--- a/app_folder/templates/login.html
+++ b/app_folder/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Sign in</h1>
+    <h1>Авторизация</h1>
     <form action="" method="POST" novalidate>
         {{ form.hidden_tag() }}
         <p>
@@ -15,7 +15,7 @@
             {{ form.password.label }}<br>
             {{ form.password(size = 32)}}<br>
             {% for error in form.password.errors %}
-            <span style="color: red;">[{{error}}]</span>
+            <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
