--- a/app_folder/templates/register_form.html
+++ b/app_folder/templates/register_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Авторизация</h1>
+    <h1>Регистрация</h1>
     <form action="" method="POST" novalidate>
         {{ form.hidden_tag() }}
         {{ form.csrf_tocken }}
@@ -13,13 +13,25 @@
             {% endfor %}
         </p>
         <p>
+            {{ form.location.label }}<br>
+            {{ form.location() }}<br>
+            {% for error in form.location.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
             {{ form.password.label }}<br>
-            {{ form.password(size = 32)}}<br>
+            {{ form.password(size = 32) }}<br>
             {% for error in form.password.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+        <p>
+            {{ form.remember_me() }}
+            {{ form.remember_me.label }}
+        </p>
+        <p>
+            {{ form.submit() }}
+        </p>
     </form>
 {% endblock %}
