--- a/app_folder/templates/base.html
+++ b/app_folder/templates/base.html
@@ -7,7 +7,11 @@
         <div>
             Board:
             <a href="{{ url_for('index') }}">На главную</a>
+            {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Авторизация</a>
+            {% else %}
+            <a href="{{ url_for('logout') }}">Выход</a>
+            {% endif %}
         </div>
         <hr>
         {% with flash_messages = get_flashed_messages() %}
