--- a/app_folder/templates/register_form.html
+++ b/app_folder/templates/register_form.html
@@ -13,6 +13,13 @@
             {% endfor %}
         </p>
         <p>
+            {{ form.email.label }}<br>
+            {{ form.email(size = 64) }}<br>
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
             {{ form.location.label }}<br>
             {{ form.location() }}<br>
             {% for error in form.location.errors %}
@@ -23,6 +30,13 @@
             {{ form.password.label }}<br>
             {{ form.password(size = 32) }}<br>
             {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.repeat_password.label }}<br>
+            {{ form.repeat_password(size = 32) }}<br>
+            {% for error in form.repeat_password.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
