--- a/app_folder/templates/index.html
+++ b/app_folder/templates/index.html
@@ -2,4 +2,6 @@
 
 {% block content %}
     <h1>Привет, {{ current_user.username }}!</h1>
+    <p><a href="{{ url_for('add_product') }}">Добавить новый продукт</a></p>
+    
 {% endblock %}
