--- a/app_folder/templates/base.html
+++ b/app_folder/templates/base.html
@@ -10,6 +10,7 @@
             {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Авторизация</a>
             {% else %}
+            <a href="{{ url_for('my_offers') }}">Мои предложения</a>
             <a href="{{ url_for('logout') }}">Выход</a>
             {% endif %}
         </div>
