added product page

--- a/app_folder/templates/search_form.html
+++ b/app_folder/templates/search_form.html
@@ -14,10 +14,12 @@
             </div>
             <hr>
             {% for p in products %}
-                <p>[{{ p.category.name }}] - [{{ p.name }}] - [{{ p.timestamp }}]</p>
-                {% if p.path_to_photo %}
-                    <img src="{{ p.path_to_photo }}" alt="{{ p.name }}">
-                {% endif %}
+                <div onclick="window.location=`{{ url_for('show_product', product_id = p.id) }}`">
+                    <p>[{{ p.category.name }}] - [{{ p.name }}] - [{{ p.timestamp }}]</p>
+                    {% if p.path_to_photo %}
+                        <img src="{{ p.path_to_photo }}" alt="{{ p.name }}">
+                    {% endif %}
+                </div>
             {% endfor %}
             <hr>
     </form>
