--- a/app_folder/templates/my_offers.html
+++ b/app_folder/templates/my_offers.html
@@ -4,10 +4,12 @@
     <h1>Предложения пользователя {{ current_user.username }}</h1>
     <hr>
     {% for o in offers %}
-    <p>[{{ o.category.name }}] - [{{ o.name }}] - [{{ o.timestamp }}]</p>
-    {% if o.path_to_photo %}
-    <img src="{{ o.path_to_photo }}" alt="{{ o.name }}">
-    {% endif %}
+        <div onclick="window.location=`{{ url_for('show_product', product_id = o.id) }}`">
+            <p>[{{ o.category.name }}] - [{{ o.name }}] - [{{ o.timestamp }}]</p>
+            {% if o.path_to_photo %}
+                <img src="{{ o.path_to_photo }}" alt="{{ o.name }}">
+            {% endif %}
+        </div>
     {% endfor %}
     <hr>
     <p><a href="{{ url_for('add_product') }}">Добавить новый продукт</a></p>
