--- a/app_folder/templates/product_page.html
+++ b/app_folder/templates/product_page.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Продукт {{ p.name }} пользователя {{ owner.username }}</h1>
+    <h1>Продукт {{ product.name }} пользователя {{product.owner.username }}</h1>
     <div>
-        <p>[{{ p.category.name }}] - [{{ p.name }}] - [{{ p.timestamp }}]</p>
-            {% if p.path_to_photo %}
-                <img src="{{ p.path_to_photo }}" alt="{{ p.name }}">
+        <p>[{{ product.category.name }}] - [{{ product.name }}] - [{{ product.timestamp }}]</p>
+            {% if product.path_to_photo %}
+                <img src="{{ product.path_to_photo }}" alt="{{ product.name }}">
             {% endif %}
     </div>
 {% endblock %}
