--- a/app_folder/templates/edit_product.html
+++ b/app_folder/templates/edit_product.html
@@ -24,8 +24,8 @@
     
     </form>        
 
-    {% if product.path_to_photo %}
-        <img src="{{ product.path_to_photo }}" alt="{{ product.name }}">
+    {% if product.photo_name %}
+        <img src="{{ get_path(product.photo_name) }}" alt="{{ product.name }}">
     {% endif %}
 
 
