--- a/app_folder/templates/my_offers.html
+++ b/app_folder/templates/my_offers.html
@@ -3,11 +3,11 @@
 {% block content %}
     <h1>Предложения пользователя {{ current_user.username }}</h1>
     <hr>
-    {% for o in offers %}
-        <div onclick="window.location=`{{ url_for('show_product', product_id = o.id) }}`">
-            <p>[{{ o.category.name }}] - [{{ o.name }}] - [{{ o.timestamp }}]</p>
-            {% if o.path_to_photo %}
-                <img src="{{ o.path_to_photo }}" alt="{{ o.name }}">
+    {% for p in products %}
+        <div onclick="window.location=`{{ url_for('show_product', product_id = p.id) }}`">
+            <p>[{{ p.category.name }}] - [{{ p.name }}] - [{{ p.timestamp }}]</p>
+            {% if p.photo_name %}
+                <img src="{{ get_path(p.photo_name) }}" alt="{{ p.name }}">
             {% endif %}
         </div>
     {% endfor %}
