--- a/app_folder/templates/index.html
+++ b/app_folder/templates/index.html
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Привет, {{ current_user.username }}!</h1>
     <p><a href="{{ url_for('add_product') }}">Добавить новый продукт</a></p>
+    <p><a href="{{ url_for('search_product') }}">Поиск товаров</a></p>
     
 {% endblock %}
