--- a/app_folder/templates/index.html
+++ b/app_folder/templates/index.html
@@ -4,5 +4,6 @@
     <h1>Привет, {{ current_user.username }}!</h1>
     <p><a href="{{ url_for('add_product') }}">Добавить новый продукт</a></p>
     <p><a href="{{ url_for('search_product') }}">Поиск товаров</a></p>
+    <p><a href="{{ vk_url }}">войти через VK</a></p>
     
 {% endblock %}
