Added vk registration and vk logging in

--- a/app_folder/templates/login.html
+++ b/app_folder/templates/login.html
@@ -26,4 +26,5 @@
         Впервые здесь?
         <a href="{{ url_for('register') }}">Регистрация!</a>
     </p>
+    <p><a href="{{ vk_url }}">войти через VK</a></p>
 {% endblock %}
