Added link for profile editing

--- a/app_folder/templates/base.html
+++ b/app_folder/templates/base.html
@@ -12,6 +12,7 @@
             {% else %}
                 <a href="{{ url_for('my_offers') }}">Мои предложения</a>
                 <a href="{{ url_for('logout') }}">Выход</a>
+                <a href="{{ url_for('edit_profile') }}">Редактировать профиль</a>
             {% endif %}
         </div>
         <hr>
