--- a/app_folder/templates/product_page.html
+++ b/app_folder/templates/product_page.html
@@ -7,13 +7,26 @@
             {% if product.photo_name %}
                 <img src="{{ get_path(product.photo_name) }}" alt="{{ product.name }}">
             {% endif %}
+
+
             <div>
                 {% if current_user == product.owner %}
                     <a href="{{ url_for('edit_product', product_id = product.id) }}">
                         Редактировать
                     </a>
+                    <div>
+                        {% for d in dialog_list %}
+                        <div>
+                            <a href="{{ url_for('show_dialog', dialog_id = d.id) }}">Перейти к диалогу</a>
+                        </div>
+                        {% endfor %}
+                    </div>
                 {% elif not current_user.is_anonymous %}
-                    <a href="{{ url_for('index') }}">Забронировать</a>
+                    {% if not dialog_list %}<!--if dialog_list is empty we will create one-->
+                        <a href="{{ create_dialog(product_id = product.id, customer_id = current_user.id) }}">Перейти к диалогу</a>
+                    {% else %}<!--if dialog_list isn't empty we will show dialog-->
+                        <a href="{{ url_for('show_dialog', dialog_id=dialog_list[0].id) }}">Перейти к диалогу</a>
+                    {% endif %}
                 {% else %}
                     Чтобы забронировать <a href="{{ url_for('login') }}">авторизуйтесь!</a>
                 {% endif %}
