--- a/app_folder/templates/my_offers.html
+++ b/app_folder/templates/my_offers.html
@@ -12,5 +12,5 @@
         </div>
     {% endfor %}
     <hr>
-    <p><a href="{{ url_for('add_product') }}">Добавить новый продукт</a></p>
+    <p><a href="{{ url_for('add_offer') }}">Добавить новое предложение</a></p>
 {% endblock %}
