--- a/app_folder/templates/search_offers.html
+++ b/app_folder/templates/search_offers.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Поиск товара</h1>
+    <h1>Поиск предложений</h1>
     <form action="" method="POST" novalidate>
         {{ form.hidden_tag }}
         {{ form.csrf_token }}
