--- a/app_folder/templates/edit_product.html
+++ b/app_folder/templates/edit_product.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Продукт {{ product.name }}</h1>
     <form action="" method="POST" enctype="multipart/form-data" novalidate>
-        {{ form.hidden_tag }}
+        {{ form.hidden_tag() }}
         {{ form.csrf_token }}
         <p>
             {{ form.productname.label }}<br>
