--- a/app_folder/templates/show_dialog.html
+++ b/app_folder/templates/show_dialog.html
@@ -9,7 +9,7 @@
     </div>
     <br>
     <form action="" method="POST" enctype="multipart/form-data" novalidate>
-        {{ form.hidden_tag }}
+        {{ form.hidden_tag() }}
         {{ form.csrf_token }}
         <div>
             {{ form.textarea }}
