--- a/app_folder/templates/my_offers.html
+++ b/app_folder/templates/my_offers.html
@@ -10,7 +10,18 @@
                 <img src="{{ get_path(p.photo_name) }}" alt="{{ p.name }}">
             {% endif %}
         </div>
+        <form action="{{ url_for('delete_product') }}" method="POST">
+            {{ form.csrf_token() }}
+            {{ form.next_page(value=url_for('my_offers')) }}
+            {{ form.index(value=p.id) }}
+            {{ form.submit }}
+        </form>
     {% endfor %}
     <hr>
     <p><a href="{{ url_for('add_offer') }}">Добавить новое предложение</a></p>
 {% endblock %}
+
+<!--
+    add some JS here
+    (do not reload page after deleting)
+-->
