--- a/app_folder/templates/product_page.html
+++ b/app_folder/templates/product_page.html
@@ -22,14 +22,19 @@
                         {% endfor %}
                     </div>
                     <form action="{{ url_for('delete_product') }}" method="POST">
-                        {{ form.csrf_token() }}
-                        {{ form.next_page }}
-                        {{ form.index(value=product.id) }}
-                        {{ form.submit }}
+                        {{ delete_product_form.csrf_token() }}
+                        {{ delete_product_form.next_page }}
+                        {{ delete_product_form.index(value=product.id) }}
+                        {{ delete_product_form.submit }}
                     </form>
                 {% elif not current_user.is_anonymous %}
                     {% if not dialog_list %}<!--if dialog_list is empty we will create one-->
-                        <a href="{{ create_dialog(product_id = product.id, customer_id = current_user.id) }}">Перейти к диалогу</a>
+                        <form action="{{ url_for('create_dialog') }}" method="POST">
+                            {{ create_dialog_form.csrf_token() }}
+                            {{ create_dialog_form.product_id(value=product.id) }}
+                            {{ create_dialog_form.customer_id(value=current_user.id) }}
+                            {{ create_dialog_form.submit }}
+                        </form>
                     {% else %}<!--if dialog_list isn't empty we will show dialog-->
                         <a href="{{ url_for('show_dialog', dialog_id=dialog_list[0].id) }}">Перейти к диалогу</a>
                     {% endif %}
